add main.css styling for entire document

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
     <title>Sample App</title>
   </head>
   <body>
